# pdf-autofillr

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  COMPLETE_SETUP_FLOW.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FREE_LOCAL_LLMS.md  GETTING_STARTED.md  GPU_CONFIG_EXAMPLES.md  LICENSE  Makefile  PLUGIN_FRAMEWORK_COMPLETE.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_IMPROVEMENTS.md  ignore_this.txt  package.json  pyproject.toml  rv1-fixes2.md  setup.ps1  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh  z_cmds.txt
.github/: CODEOWNERS  (+1 more)
chatbot_managed/: README.md  pyproject.toml
chatbot_managed/chatbot_managed/: filler.py
document_upload_managed/: README.md  pyproject.toml
document_upload_managed/document_upload_managed/: filler.py
modules/chatbot/: .env.example  .gitignore  API_SERVER.md  Dockerfile  MANIFEST.in  README.md  SETUP_GUIDE.md  api_server.py  pyproject.toml  quickstart.md  requirements-api.txt  requirements-full.txt  requirements-mapper.txt  requirements-s3.txt  requirements.txt
modules/chatbot/config_samples/: README.md  form_keys_label.json  mandatory.json  meta_form_keys.json
modules/chatbot/config_samples/global_investor_type_keys/: form_keys_education_institutions.json  form_keys_ira.json  form_keys_non_profit_organisations.json
modules/chatbot/configs/: field_questions.json  form_keys.json
modules/chatbot/configs/global_investor_type_keys/: form_keys_fund_or_fund_of_funds.json  form_keys_individual.json  form_keys_llc.json  form_keys_partnership.json
modules/chatbot/entrypoints/: __init__.py  aws_lambda.py  cli.py  fastapi_app.py  local.py
modules/chatbot/src/chatbot/: __init__.py  client.py
modules/chatbot/src/chatbot/config/: form_config.py  settings.py
modules/chatbot/src/chatbot/core/: engine.py  router.py  session.py  states.py
modules/chatbot/src/chatbot/entrypoints/: aws_lambda.py  cli.py  fastapi_app.py  server.py
modules/chatbot/src/chatbot/extraction/: extractor.py  llm_extractor.py  prompt_builder.py
modules/chatbot/src/chatbot/handlers/: __init__.py  another_info_handler.py  base_handler.py  boolean_group_handler.py  data_collection_handler.py  investor_type_handler.py  mailing_check_handler.py  missing_fields_handler.py  optional_fields_handler.py  sequential_fill_handler.py  update_existing_handler.py
modules/chatbot/src/chatbot/limits/: __init__.py  rate_limiter.py
modules/chatbot/src/chatbot/logging/: debug_logger.py
modules/chatbot/src/chatbot/managed/: __init__.py
modules/chatbot/src/chatbot/pdf/: fill_report.py  interface.py  mapper_filler.py
modules/chatbot/src/chatbot/storage/: base.py  factory.py  local_storage.py  s3_storage.py
modules/chatbot/src/chatbot/telemetry/: __init__.py  collector.py  config.py
modules/chatbot/src/chatbot/utils/: address_utils.py  dict_utils.py  field_utils.py  intent_detection.py
modules/chatbot/src/chatbot/validation/: field_validator.py
modules/chatbot/tests/: conftest.py
modules/chatbot/tests/integration/: test_api_server.py  test_local_entrypoint.py
modules/chatbot/tests/unit/: test_engine.py  test_extraction.py  test_mapper_filler.py  test_rate_limiter.py  test_session.py  test_states.py  test_storage.py  test_utils.py
modules/mapper/: .dockerignore  .env.example  .gitignore  API_SERVER.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT.md  DESIGN_LOCAL_DEPLOYMENT.md  DOCKER.md  DOCKER_LOCAL_USAGE.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  FILE_HANDLERS_SUMMARY.md  FIXES_APPLIED.md  FIX_SAVE_RESULTS.md  HTTP_SERVER.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MAPPER_REFACTOR_GUIDE.md  PATH_FIX_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  SDK_SETUP_SUMMARY.md  SETUP_GUIDE.md  USING_FILE_HANDLERS.md  api_server.py  config.ini  config.ini.example  docker-build.sh  docker-run-local.sh  docker-test.sh  m_req.txt  pyproject.toml  requirements-api.txt  requirements-aws.txt  requirements-azure.txt  requirements-full.txt  requirements-gcp.txt  requirements.txt  setup.py  (+4 more)
modules/mapper/adapter_src/: notifier.py
modules/mapper/adapter_src/clients/: http_client.py  teams_client.py
modules/mapper/deployment/: DEPLOYMENT_GUIDE.md
modules/mapper/deployment/docker/: Dockerfile  README.md  docker-compose.yml
modules/mapper/entrypoints/: __init__.py  aws_lambda.py  aws_lambda_handler.py  azure_function.py  cli.py  fastapi_app.py  gcp_function.py  http_server.py  local.py
modules/mapper/src/: orchestrator.py
modules/mapper/src/chunkers/: __init__.py  base.py  page_chunker.py  window_chunker.py
modules/mapper/src/clients/: __init__.py  api_client.py  auth_client.py  s3_client.py  unified_llm_client.py
modules/mapper/src/configs/: __init__.py  aws.py  azure.py  base.py  factory.py  file_config.py  gcp.py  local.py
modules/mapper/src/core/: config.py  logger.py
modules/mapper/src/embedders/: embed_keys.py
modules/mapper/src/extractors/: detailed_fitz.py  fitz_extract_lines.py
modules/mapper/src/fillers/: fill_pdf.py
modules/mapper/src/groupers/: __init__.py  base_grouper.py  group_by_llm.py
modules/mapper/src/handlers/: __init__.py  file_handlers.py  input_handler.py  operations.py  output_handler.py
modules/mapper/src/headers/: __init__.py  create_rag_files.py  get_form_fields_points.py
modules/mapper/src/java_utils/: pom.xml
modules/mapper/src/mappers/: semantic_mapper.py
modules/mapper/src/models/: bounding_box.py
modules/mapper/src/prompts/: renderer.py
modules/mapper/src/storage/: job_context.py
modules/mapper/src/utils/: __init__.py  config_loader.py  data_combiner.py  entrypoint_helpers.py  hash_cache.py  ini_config.py  llm_json.py  map_time_estimator.py  pdf_hash.py  refresh_pdf.py  storage.py  storage_helper.py  timing.py
modules/mapper/src/validators/: embed_validator.py
modules/mapper/tests/: conftest.py  test_embed.py  test_extract.py  test_fill.py  test_group_by_llm.py  test_headers.py  test_integration.py  test_llm_json.py  test_make_embed.py  test_make_embed_integration.py  test_renderer.py  test_semantic_mapper.py  test_unified_llm_client.py
(+212 files in other folders)
