[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot-sdk"
version = "0.1.0"
description = "Conversational investor onboarding chatbot SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.12.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.35.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
redis = ["redis>=5.0.0"]
all = ["boto3>=1.35.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "redis>=5.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/yourorg/chatbot-sdk"
Documentation = "https://docs.chatbot.io"
Repository = "https://github.com/yourorg/chatbot-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]