[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragpdf-sdk"
version = "0.1.1"
description = "Self-learning RAG field prediction SDK for PDF form filling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["rag", "pdf", "form-filling", "embeddings", "nlp", "field-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
transformers   = ["sentence-transformers>=2.3.1", "torch>=2.0.0"]
openai         = ["openai>=1.51.0", "httpx>=0.27.0"]
anthropic      = ["anthropic>=0.34.0"]
s3             = ["boto3>=1.35.0"]
pinecone       = ["pinecone-client>=3.0.0"]
chroma         = ["chromadb>=0.4.0"]
weaviate       = ["weaviate-client>=4.0.0"]
server         = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
all            = ["sentence-transformers>=2.3.1", "torch>=2.0.0", "openai>=1.51.0",
                  "httpx>=0.27.0", "boto3>=1.35.0", "fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev            = ["pytest>=7.0", "pytest-asyncio", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage      = "https://github.com/yourorg/ragpdf-sdk"
Documentation = "https://docs.ragpdf.io"
Repository    = "https://github.com/yourorg/ragpdf-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/ragpdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers   = ["integration: requires real API keys", "slow: slow tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"
