[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-upload-managed"
version = "0.1.0"
description = "Private managed PDF filler for upload-document-sdk"
requires-python = ">=3.10"
dependencies = [
    "upload-document-sdk>=0.1.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["document_upload_managed"]
