[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-mapper"
version = "1.0.0"
description = "Platform-agnostic PDF field extraction, mapping, embedding, and filling module"
readme = "README.md"
authors = [
    {name = "Engineersmind", email = "team@engineersmind.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["pdf", "form-filling", "llm", "mapping", "extraction", "embedding"]
requires-python = ">=3.9"

dependencies = [
    # Core PDF processing
    "pymupdf>=1.23.0",
    "pypdf>=3.17.0",
    
    # LLM & AI
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP & API
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.34",
    "botocore>=1.34.34",
]

azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "azure-functions>=1.18.0",
]

gcp = [
    "google-cloud-storage>=2.14.0",
    "functions-framework>=3.5.0",
]

api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

all = [
    "pdf-mapper[aws,azure,gcp,api,dev]"
]

[project.urls]
Homepage = "https://github.com/Engineersmind/pdf-autofillr"
Repository = "https://github.com/Engineersmind/pdf-autofillr"
Documentation = "https://github.com/Engineersmind/pdf-autofillr/tree/main/docs"
Issues = "https://github.com/Engineersmind/pdf-autofillr/issues"

[project.scripts]
pdf-mapper = "entrypoints.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "adapter_src*"]

# =============================================================================
# Black - Code Formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# =============================================================================
# isort - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# =============================================================================
# pytest - Testing Framework
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "aws: marks tests that require AWS credentials",
    "azure: marks tests that require Azure credentials",
    "gcp: marks tests that require GCP credentials",
]

# =============================================================================
# coverage - Code Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/adapter_src/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# =============================================================================
# mypy - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pymupdf.*",
    "fitz.*",
    "anthropic.*",
]
ignore_missing_imports = true
